2009-11-23  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Applied part of patch provided by Stephan Kleine
	(http://lists.wald.intevation.org/pipermail/openvas-devel/2009-November/001907.html)
	to fix compilation on openSUSE 11.2

	* base/CMakeList.txt: Added glib linker flags, patch provided by
	Stephan Kleine.

2009-11-23  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.0.beta8.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-11-23  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-libraries 3.0.0-beta7 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.0.0.beta7.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-11-23  Chandrashekhar B <bchandra@secpod.com>

	* misc/pcap.c (getipv6routes): Changed the message not to report
	as error.

	* hg/hg_utils.c (hg_get_name_from_ip): Bug fixes:
	- Possible buffer overflow in memcpy()
	- Seperate v4 and v6 logic so that it resolves to pure IPv4 address
	and not a v6 mapped v4 address.
	- Included ':' in the hostname structuring code, ':' is a valid char
	in v6 address and also trim the resuling hostname.

2009-11-20  Chandrashekhar B <bchandra@secpod.com>

	* misc/pcap.c (v6_routethrough): Bug fix, segfault when scanner
	is run as non-root.

2009-11-20  Chandrashekhar B <bchandra@secpod.com>

	* misc/pcap.c: Fixed compile errors when TCPIP_DEBUGGING is enabled.

2009-11-20  Michael Wiegand <michael.wiegand@intevation.de>

	* base/pidfile.c (pidfile_remove): Write a debug message to the log on
	pidfile deletion to help trace premature pidfile deletion.

2009-11-16  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/omp.c (check_response): Make external.  Return 1 on OMP fail instead
	of -1.

	* omp/omp.h: Add new header.

2009-11-14  Srinivas NL <nl.srinivas@gmail.com>

	* misc/network.c : Added the following functions to handle
	ipv4 and ipv6 address lists parsed from -S option